Manifest-Files/ingress.yaml
#https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.2.1/deploy/static/provider/cloud/deploy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /fss(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: fss-web-service
            port:
              number: 81
      - path: /oracle(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: web-service
            port:
              number: 82
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: fss
            port:
              number: 81
